--- a/clicks.html
+++ b/clicks.html
@@ -3,7 +3,12 @@
 
 <head>
     <title>Matt Kapitan Javascript</title>
-
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
@@ -16,15 +21,16 @@
 <div class="wrap">
     <main role="main">
         <section>
-            <a href="index.html"><button class="button">Home</button></a>
+            <a href="index.html"><button type="submit" class="btn btn-primary">Home</button></a>
             <header>
-                <h2>Click Counter</h2>
+                <h2>Click Counter</h2><br>
             </header>
 
             <article id="introduction">
+                <button type="button" class="btn btn-outline-primary" onClick="onClick()">Click this!</button>
+                <button type="button" class="btn btn-outline-primary" onClick="showClicks()">Show Clicks</button>
+                <br><br>
 
-                <button type="button" onClick="onClick()">Click this!</button>
-                <button onclick="showClicks()">Show clicks</button>
                 <h3>Requirements</h3>
                 <ol>
                     <li>First, create an HTML page with two buttons.</li>
@@ -32,7 +38,6 @@
                     <li>The second button, when clicked, uses an alert() to let the user know how many times the first button was clicked.</li>
                     <li>The message should say "You clicked x times" where x is the number of times the first button was clicked.</li>
                 </ol>
-
             </article>
         </section>
     </main>
