--- a/getstarted.html
+++ b/getstarted.html
@@ -1,6 +1,13 @@
 <html lang="en">
 <head>
+
     <title>Matt Kapitan Javascript</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
@@ -13,7 +20,7 @@
 <div class="wrap">
     <main role="main">
         <section>
-            <a href="index.html"><button class="button">Home</button></a>
+            <a href="index.html"><button type="submit" class="btn btn-primary">Home</button></a>
             <header>
                 <h2>Getting Started</h2>
             </header>
