--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 
 <head>
     <title>Matt Kapitan Javascript</title>
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <link href="css/normalize.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
@@ -24,6 +30,8 @@
                 <h3>Week 1</h3>
                 <p>Getting Started assignment: <a href="getstarted.html">Getting Started</a></p>
                 <p>Class 2 lab - Click Counter: <a href="clicks.html">Click Counter</a></p>
+                <h3>Week 2</h3>
+                <p>BAC Calculator: <a href="bac.html">BAC Calculator</a></p>
             </article>
         </section>
     </main>
