Added Class 3 Labs

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <p>Class 2 lab - Click Counter: <a href="clicks.html">Click Counter</a></p>
                 <h3>Week 2</h3>
                 <p>BAC Calculator: <a href="bac.html">BAC Calculator</a></p>
+                <p>Class 3 Labs: <a href="class3lab.html">Class 3 Labs</a></p>
             </article>
         </section>
     </main>
