Updated library and pizza apps to use jQuery instead onclick.
Also changed code.js var's to let based on some stackoverflow post :-/

--- a/class3lab.html
+++ b/class3lab.html
@@ -41,7 +41,8 @@
                         <input type="number" class="form-control" id="days" placeholder="Days Late"/>
                     </div>
 
-                    <button type="button" class="btn btn-outline-primary" onClick="calcFee()">Submit</button>
+
+                    <button type="button" id="calcfee" class="btn btn-outline-primary">Submit</button>
                     <br><br>
 
                     <h3 id="fee"></h3>
@@ -59,8 +60,7 @@
                         <input type="number" class="form-control" id="toppings" placeholder="Extra Toppings"/>
                     </div><br>
 
-
-                    <button type="button" class="btn btn-outline-primary" onClick="calcBill()">Submit</button>
+                    <button type="button" id="calcbill" class="btn btn-outline-primary">Submit</button>
                     <br><br>
 
                     <h3 id="bill"></h3>
