Completed Class 5 Lab

--- a/class5lab.html
+++ b/class5lab.html
@@ -107,7 +107,7 @@
                             </li>
                         </ul>
 
-                        <divv class="tab-content">
+                        <div class="tab-content">
                             <div id="t1" class="container tab-pane active"><br>
                                 <p> This is tab 1</p>
                              </div>
