Unit 1 project - total not working (checkboxes are not calculating :-/

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
                 <h3>Week 4</h3>
                 <h3>Week 5</h3>
                 <p>Class 5 Labs: <a href="class5lab.html">Class 5 Labs</a></p>
+                <p>Unit 1 Project: <a href="unit1.html">Unit 1 Project</a></p>
+                <h3>Week 6</h3>
+                <h3>Week 7</h3>
+                <h3>Week 8</h3>
+
             </article>
         </section>
     </main>
